--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="container hero">
       <div class="heroleft">
-        <img src="img/banner.jpg" alt="" />
+        <img src="img/dog.jpg" alt="" />
       </div>
       <div class="heroright">
         <h1>
@@ -69,7 +69,7 @@
       <div class="maincontent container">
         <div class="about">
           <h2>A Little About Us</h2>
-          <img src="img/banner.jpg" width="290" height="140" alt="" />
+          <img src="img/dolphin.jpg" width="290" height="140" alt="" />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
             numquam quos quam illum reprehenderit fugit explicabo cupiditate.
@@ -86,7 +86,7 @@
         <div class="service">
           <h2>Some of Our Services</h2>
           <div class="servicedetail">
-            <img src="img/banner.jpg" width="64" height="64" alt="" />
+            <img src="img/dog.jpg" width="64" height="64" alt="" />
             <div>
               <h3>Service Name</h3>
               <p>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="servicedetail">
-            <img src="img/banner.jpg" width="64" height="64" alt="" />
+            <img src="img/dog.jpg" width="64" height="64" alt="" />
             <div>
               <h3>Service Name</h3>
               <p>
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="servicedetail">
-            <img src="img/banner.jpg" width="64" height="64" alt="" />
+            <img src="img/dog.jpg" width="64" height="64" alt="" />
             <div>
               <h3>Service Name</h3>
               <p>
@@ -116,7 +116,7 @@
             </div>
           </div>
           <div class="servicedetail">
-            <img src="img/banner.jpg" width="64" height="64" alt="" />
+            <img src="img/dog.jpg" width="64" height="64" alt="" />
             <div>
               <h3>Service Name</h3>
               <p>
