--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
@@ -14,9 +15,12 @@
         <li>RSS Feeds</li>
         <li>Archived News</li>
       </ul>
-      <form action="" class="topright">
-        <input type="text" />
-      </form>
+      <div class="formwithicn">
+        <form action="">
+          <input type="text" />
+        </form>
+        <img src="img/search.png" alt="" />
+      </div>
     </section>
 
     <section class="banner container">
@@ -50,7 +54,7 @@
 
     <section class="container hero">
       <div class="heroleft">
-        <img src="img/dog.jpg" alt="" />
+        <img src="img/main.jpg" alt="" />
       </div>
       <div class="heroright">
         <h1>
@@ -223,10 +227,15 @@
         <hr />
         <h3>Contact Us</h3>
         <form action="" method="POST">
-          <input type="text" name="name" value="Name" />
-          <input type="text" name="email" value="Email" />
-          <input type="text" name="subject" value="Subject" />
-          <textarea name="messege" cols="40" rows="6"></textarea>
+          <input type="text" name="name" placeholder="Name" />
+          <input type="text" name="email" placeholder="Email" />
+          <input type="text" name="subject" placeholder="Subject" />
+          <textarea
+            name="messege"
+            cols="40"
+            rows="6"
+            placeholder="Message.."
+          ></textarea>
           <input type="submit" value="Submit" />
         </form>
       </div>
